--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,12 @@
 numpy
 gymnasium
-pettingzoo
 matplotlib
 pandas
-ray
-ray[tune]
-tree
+ray==2.10.0
+ray[tune]==2.10.0
 typer
-scikit-image
-optuna
 torch
+tree
+dm_tree
+scikit-image
 lz4
-tensorflow
-supersuit
-dm_tree 
