Update dependencies in requirements.txt and Dockerfile

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-numpy
-gymnasium
-matplotlib
-pandas
+numpy==1.23.5
+gymnasium==0.28.1
+matplotlib==3.7.1
+pandas==1.5.3
 ray==2.10.0
 ray[tune]==2.10.0
-typer
-torch
+torch==2.0.0
+typer==0.7.0
 tree
-dm_tree
+dm_tree==0.1.8
 scikit-image
 lz4
+gputil==1.4.0
