--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ __pycache__/
 launch.json
 ppo_checkpoints/
 checkpoints/
+checkpoints_local_test/
 # checkpoints_new/
 masterthesis_clemente.tar
 *.png
