--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-numpy
-gymnasium
-matplotlib
-pandas
-ray[default]
-ray[rllib]
-ray[tune]
-poliastro
-astropy
-tensorboard
-wandb
+numpy==2.1.3
+gymnasium==1.0.0
+matplotlib==3.10.1
+pandas==2.2.3
+ray[default]==2.44.0
+ray[rllib]==2.44.0
+ray[tune]==2.44.0
+poliastro==0.7.0
+astropy==7.0.1
+tensorboard==2.19.0
+wandb==0.19.8
+torch==2.6.0
