Fix .gitignore to allow static/images PNG files and add all images

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ checkpoints/
 checkpoints_local_test/
 checkpoints_local_train/
 *.png
+!static/images/*.png
 wandb/
 collected_metrics/
 collected_metrics_v2/
